[gd_scene load_steps=9 format=2]

[ext_resource path="res://games/topdown_shooter/level_side_block.tscn" type="PackedScene" id=1]
[ext_resource path="res://games/topdown_shooter/obstacle.tscn" type="PackedScene" id=2]
[ext_resource path="res://games/topdown_shooter/TileMap.tscn" type="PackedScene" id=3]
[ext_resource path="res://games/topdown_shooter/camera_shake.gd" type="Script" id=4]
[ext_resource path="res://games/topdown_shooter/topdown_shooter.gd" type="Script" id=5]
[ext_resource path="res://games/topdown_shooter/spawnPath.tscn" type="PackedScene" id=6]
[ext_resource path="res://games/topdown_shooter/player_onedir.tscn" type="PackedScene" id=7]
[ext_resource path="res://games/topdown_shooter/enemy.tscn" type="PackedScene" id=8]

[node name="topdown_shooter" type="Node2D"]
script = ExtResource( 5 )
GameType = "Classic adaptive difficulty"

[node name="Navigation2D" type="Navigation2D" parent="."]

[node name="TileMap" parent="Navigation2D" instance=ExtResource( 3 )]
scale = Vector2( 4, 4 )
z_index = -100
tile_data = PoolIntArray( -196608, 1, 3, -196607, -1610612735, 3, -196604, 1, 0, -196603, 1, 1, -196602, -1610612735, 0, -196597, 1, 10, -196596, 1, 11, -196595, 1, 65546, -196594, 1, 65547, -131072, -1073741823, 3, -131071, 1610612737, 3, -131070, 1, 131075, -131068, -1073741823, 1, -131066, -1610612735, 1, -131061, 1, 65537, -65532, -1073741823, 0, -65531, 1610612737, 1, -65530, 1610612737, 0, 0, 1, 11, 1, 1, 11, 2, 1, 11, 3, 1, 11, 4, 1, 11, 5, 1, 11, 6, 1, 11, 7, 1, 11, 8, 1, 11, 9, 1, 11, 10, 1, 11, 11, 1, 11, 12, 1, 11, 13, 1, 11, 14, 1, 11, 15, 1, 11, 16, 1, 11, 17, 1, 11, 18, 1, 11, 19, 1, 11, 20, 1, 11, 65536, 1, 11, 65537, 1, 11, 65538, 1, 11, 65539, 1, 10, 65540, 1, 65546, 65541, 1, 11, 65542, 1, 11, 65543, 1, 11, 65544, 1, 11, 65545, 1, 11, 65546, 1, 11, 65547, 1, 11, 65548, 1, 11, 65549, 1, 11, 65550, 1, 11, 65551, 1, 11, 65552, 1, 11, 65553, 1, 11, 65554, 1, 11, 65555, 1, 11, 65556, 1, 11, 131072, 1, 11, 131073, 1, 11, 131074, 1, 11, 131075, 1, 11, 131076, 1, 11, 131077, 1, 11, 131078, 1, 11, 131079, 1, 11, 131080, 1, 11, 131081, 1, 11, 131082, 1, 11, 131083, 1, 11, 131084, 1, 11, 131085, 1, 11, 131086, 1, 11, 131087, 1, 11, 131088, 1, 11, 131089, 1, 11, 131090, 1, 11, 131091, 1, 11, 131092, 1, 11, 196608, 1, 11, 196609, 1, 11, 196610, 1, 11, 196611, 1, 11, 196612, 1, 3, 196613, 1610612737, 1, 196614, 1610612737, 1, 196615, -1610612735, 3, 196616, 1, 11, 196617, 1, 131075, 196618, 1, 11, 196619, 1, 11, 196620, 1, 11, 196621, 1, 11, 196622, 1, 11, 196623, 1, 11, 196624, 1, 11, 196625, 1, 131075, 196626, 1, 11, 196627, 1, 11, 196628, 1, 11, 262144, 1, 11, 262145, 1, 11, 262146, 1, 11, 262147, 1, 3, 262148, 1610612737, 0, 262149, 1, 131075, 262150, 1, 131075, 262151, -1073741823, 1, 262152, 1, 11, 262153, 1, 11, 262154, 1, 11, 262155, 1, 11, 262156, 1, 11, 262157, 1, 11, 262158, 1, 11, 262160, 1, 11, 262161, 1, 131075, 262162, 1, 11, 262163, 1, 11, 262164, 1, 11, 327680, 1, 11, 327681, 1, 11, 327682, 1, 11, 327683, -1073741823, 3, 327684, 1, 1, 327685, 1, 1, 327686, 1, 1, 327687, 1610612737, 3, 327688, 1, 11, 327689, 1, 11, 327690, 1, 11, 327691, 1, 11, 327692, 1, 11, 327693, 1, 11, 327694, 1, 131075, 327696, 1, 11, 327697, 1, 131075, 327698, 1, 11, 327699, 1, 11, 327700, 1, 11, 393216, 1, 11, 393217, 1, 11, 393218, 1, 11, 393219, 1, 11, 393220, 1, 11, 393221, 1, 11, 393222, 1, 11, 393223, 1, 11, 393224, 1, 11, 393225, 1, 11, 393226, 1, 11, 393227, 1, 11, 393228, 1, 11, 393229, 1, 131075, 393230, 1, 131075, 393231, 1, 131075, 393232, 1, 11, 393233, 1, 131075, 393234, 1, 11, 393235, 1, 11, 393236, 1, 11, 458752, 1, 11, 458753, 1, 11, 458754, 1, 11, 458755, 1, 11, 458756, 1, 11, 458757, 1, 11, 458758, 1, 11, 458759, 1, 11, 458760, 1, 11, 458761, 1, 11, 458762, 1, 11, 458763, 1, 11, 458764, 1, 11, 458765, 1, 11, 458766, 1, 131075, 458767, 1, 131075, 458768, 1, 11, 458769, 1, 131075, 458770, 1, 11, 458771, 1, 11, 458772, 1, 11, 524288, 1, 11, 524289, 1, 11, 524290, 1, 11, 524291, 1, 11, 524292, 1, 11, 524293, 1, 11, 524294, 1, 11, 524295, 1, 11, 524296, 1, 11, 524297, 1, 11, 524298, 1, 11, 524299, 1, 11, 524300, 1, 11, 524301, 1, 11, 524302, 1, 11, 524303, 1, 131075, 524304, 1, 131075, 524305, 1, 131075, 524306, 1, 11, 524307, 1, 11, 524308, 1, 11, 589824, 1, 11, 589825, 1, 11, 589826, 1, 11, 589827, 1, 11, 589828, 1, 11, 589829, 1, 131075, 589830, 1, 131075, 589831, 1, 131075, 589832, 1, 11, 589833, 1, 11, 589834, 1, 11, 589835, 1, 11, 589836, 1, 11, 589837, 1, 11, 589838, 1, 11, 589839, 1, 11, 589840, 1, 11, 589841, 1, 11, 589842, 1, 11, 589843, 1, 11, 589844, 1, 11, 655360, 1, 11, 655361, 1, 11, 655362, 1, 11, 655363, 1, 11, 655364, 1, 131075, 655365, 1, 131075, 655366, 1, 131075, 655367, 1, 131075, 655368, 1, 11, 655369, 1, 11, 655370, 1, 11, 655371, 1, 11, 655372, 1, 11, 655373, 1, 11, 655374, 1, 11, 655375, 1, 11, 655376, 1, 11, 655377, 1, 11, 655378, 1, 11, 655379, 1, 11, 655380, 1, 11, 720896, 1, 11, 720897, 1, 11, 720898, 1, 11, 720899, 1, 11, 720900, 1, 11, 720901, 1, 131075, 720902, 1, 11, 720903, 1, 11, 720904, 1, 11, 720905, 1, 11, 720906, 1, 11, 720907, 1, 11, 720908, 1, 11, 720909, 1, 11, 720910, 1, 11, 720911, 1, 11, 720912, 1, 11, 720913, 1, 11, 720914, 1, 11, 720915, 1, 11, 720916, 1, 11, 786432, 1, 11, 786433, 1, 11, 786434, 1, 11, 786435, 1, 11, 786436, 1, 11, 786437, 1, 131075, 786438, 1, 11, 786439, 1, 11, 786440, 1, 11, 786441, 1, 11, 786442, 1, 11, 786443, 1, 11, 786444, 1, 11, 786445, 1, 11, 786446, 1, 11, 786447, 1, 11, 786448, 1, 11, 786449, 1, 11, 786450, 1, 11, 786451, 1, 11, 786452, 1, 11 )

[node name="ai_Timer" type="Timer" parent="Navigation2D"]
wait_time = 0.5
autostart = true

[node name="player" parent="." instance=ExtResource( 7 )]
position = Vector2( 134.03, 602.191 )
fire_rate = 1.0
bulletspray = 10

[node name="obstacles" type="Node" parent="."]

[node name="obstacle" parent="obstacles" instance=ExtResource( 2 )]
position = Vector2( 904.982, 175.069 )

[node name="obstacle2" parent="obstacles" instance=ExtResource( 2 )]
position = Vector2( 613.577, 659.124 )

[node name="obstacle3" parent="obstacles" instance=ExtResource( 2 )]
position = Vector2( 946.1, 676.997 )
rotation = -2.44336

[node name="obstacle4" parent="obstacles" instance=ExtResource( 2 )]
position = Vector2( 112.67, 494.532 )
rotation = -2.44336

[node name="enemies" type="Node" parent="."]

[node name="enemy" parent="enemies" instance=ExtResource( 8 )]
position = Vector2( 411.529, 449.284 )

[node name="spawnPath" parent="." instance=ExtResource( 6 )]

[node name="spawnTimer" type="Timer" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 640, 400 )
current = true
script = ExtResource( 4 )

[node name="level_side" type="Node" parent="."]

[node name="level_side_block" parent="level_side" instance=ExtResource( 1 )]
position = Vector2( -63.4961, 68.2582 )

[node name="level_side_block2" parent="level_side" instance=ExtResource( 1 )]
position = Vector2( -66.6709, 190.488 )

[node name="level_side_block3" parent="level_side" instance=ExtResource( 1 )]
position = Vector2( -65.0835, 311.131 )

[node name="level_side_block4" parent="level_side" instance=ExtResource( 1 )]
position = Vector2( -66.6709, 438.123 )

[node name="level_side_block5" parent="level_side" instance=ExtResource( 1 )]
position = Vector2( -66.2583, 562.115 )

[node name="level_side_block6" parent="level_side" instance=ExtResource( 1 )]
position = Vector2( -69.4331, 684.345 )

[node name="level_side_block7" parent="level_side" instance=ExtResource( 1 )]
position = Vector2( -65.8457, 807.987 )

[node name="level_side_block20" parent="level_side" instance=ExtResource( 1 )]
position = Vector2( 1404.92, 38.5933 )

[node name="level_side_block21" parent="level_side" instance=ExtResource( 1 )]
position = Vector2( 1401.74, 160.823 )

[node name="level_side_block22" parent="level_side" instance=ExtResource( 1 )]
position = Vector2( 1403.33, 281.466 )

[node name="level_side_block23" parent="level_side" instance=ExtResource( 1 )]
position = Vector2( 1401.74, 408.458 )

[node name="level_side_block24" parent="level_side" instance=ExtResource( 1 )]
position = Vector2( 1402.16, 532.45 )

[node name="level_side_block25" parent="level_side" instance=ExtResource( 1 )]
position = Vector2( 1398.98, 654.68 )

[node name="level_side_block26" parent="level_side" instance=ExtResource( 1 )]
position = Vector2( 1402.57, 778.322 )

[node name="level_side_block8" parent="level_side" instance=ExtResource( 1 )]
position = Vector2( 56.5669, 892.979 )

[node name="level_side_block9" parent="level_side" instance=ExtResource( 1 )]
position = Vector2( 183.567, 895.979 )

[node name="level_side_block10" parent="level_side" instance=ExtResource( 1 )]
position = Vector2( 310.567, 891.979 )

[node name="level_side_block11" parent="level_side" instance=ExtResource( 1 )]
position = Vector2( 437.567, 894.979 )

[node name="level_side_block12" parent="level_side" instance=ExtResource( 1 )]
position = Vector2( 565.567, 891.979 )

[node name="level_side_block13" parent="level_side" instance=ExtResource( 1 )]
position = Vector2( 692.567, 894.979 )

[node name="level_side_block14" parent="level_side" instance=ExtResource( 1 )]
position = Vector2( 946.567, 893.979 )

[node name="level_side_block15" parent="level_side" instance=ExtResource( 1 )]
position = Vector2( 818.422, 897.984 )

[node name="level_side_block16" parent="level_side" instance=ExtResource( 1 )]
position = Vector2( 1073.38, 893.761 )

[node name="level_side_block17" parent="level_side" instance=ExtResource( 1 )]
position = Vector2( 1200.38, 896.761 )

[node name="level_side_block19" parent="level_side" instance=ExtResource( 1 )]
position = Vector2( 1326.23, 899.766 )

[node name="level_side_block27" parent="level_side" instance=ExtResource( 1 )]
position = Vector2( -64.2119, -56.2998 )

[node name="level_side_block28" parent="level_side" instance=ExtResource( 1 )]
position = Vector2( 62.7881, -53.2998 )

[node name="level_side_block29" parent="level_side" instance=ExtResource( 1 )]
position = Vector2( 189.788, -57.2998 )

[node name="level_side_block30" parent="level_side" instance=ExtResource( 1 )]
position = Vector2( 316.788, -54.2998 )

[node name="level_side_block31" parent="level_side" instance=ExtResource( 1 )]
position = Vector2( 444.788, -57.2998 )

[node name="level_side_block32" parent="level_side" instance=ExtResource( 1 )]
position = Vector2( 571.788, -54.2998 )

[node name="level_side_block33" parent="level_side" instance=ExtResource( 1 )]
position = Vector2( 825.788, -55.2998 )

[node name="level_side_block34" parent="level_side" instance=ExtResource( 1 )]
position = Vector2( 697.644, -51.2953 )

[node name="level_side_block35" parent="level_side" instance=ExtResource( 1 )]
position = Vector2( 952.6, -55.5181 )

[node name="level_side_block36" parent="level_side" instance=ExtResource( 1 )]
position = Vector2( 1079.6, -52.5181 )

[node name="level_side_block37" parent="level_side" instance=ExtResource( 1 )]
position = Vector2( 1333.6, -53.5181 )

[node name="level_side_block38" parent="level_side" instance=ExtResource( 1 )]
position = Vector2( 1205.46, -49.5134 )
[connection signal="timeout" from="Navigation2D/ai_Timer" to="." method="_on_ai_Timer_timeout"]
[connection signal="timeout" from="spawnTimer" to="." method="_on_spawnTimer_timeout"]
